<?xml version="1.0"?>
<package>
  <name>concert_workflow_engine_blockly</name>
  <version>0.1.0</version>
  <description>The concert workflow engine package</description>
  
  <maintainer email="eunsub@gmail.com">eunsub</maintainer>
  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>
  <author>DongWook Lee</author>
  <license>BSD</license>
 
  <url type="website"></url>
  <url type="repository">https://github.com/robotics-in-concert/concert_workflow_engine</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/concert_workflow_engine/issues</url>
  <url type="website">http://www.ros.org/wiki/concert_workflow_engine</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodejs</build_depend>
  <run_depend>nodejs</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
    <software_farm>software/workflow_engine_blockly.software</software_farm>
  </export>
</package>