<?xml version="1.0"?>
<package>
  <name>concert_workflow_handler_blockly</name>
  <version>0.1.0</version>
  <description>Service launcher type support for  worflows</description>
  <maintainer email="dwlee@yujinrobot.com">Dongwook Lee</maintainer>
  <author>Dongwook Lee</author>

  <license>BSD</license>
  <url type="repository">https://github.com/robotics-in-concert/concert_workflow_engine</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/concert_workflow_engine/issues</url>
  <url type="website">http://www.ros.org/wiki/concert_workflow_handler_blockly</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_workflow_engine_msgs</run_depend>
  <run_depend>concert_workflow_engine_blockly</run_depend>
  <run_depend>concert_software_farmer</run_depend>
  <run_depend>concert_service_utilities</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
